# resizer

./: .gitignore  CMakeLists.txt  README.md
include/: resizer.hh
release/: CHANGELOG.txt  DESCRIPTION.txt
src/: resizer.cc
src/targets/: resizer.cc  rr.cc
